Lots of changes/additions, changed blueprintjs dependency to material-ui

--- a/src/renderer/res/scss/titlebar.scss
+++ b/src/renderer/res/scss/titlebar.scss
@@ -1,3 +1,5 @@
+$titlebar-background-color: #222;
+
 .titlebar {
   -webkit-app-region: drag !important;
   -webkit-user-select: none;
@@ -5,7 +7,7 @@
   height: 30px;
   margin: 0;
   padding: 0;
-  background-color: #222;
+  background-color: $titlebar-background-color;
 
   .window-buttons {
     float: right;
