--- a/src/app/res/scss/manga-list.scss
+++ b/src/app/res/scss/manga-list.scss
@@ -1,30 +1,46 @@
 .manga-list-container {
   width: 100% !important;
+  padding: 15px;
 
-  .manga-item-container {
-    max-width: 180px;
-    max-height: 255px;
-
+  .item-container {
+    max-width: 160px;
     margin: 0;
     padding: 0;
+    position: relative;
 
     .image-container {
-      width: 180px;
-      height: 255px;
+      width: 160px;
+      height: 235px;
       position: relative;
       overflow: hidden;
       display: inline-block;
       margin: 0;
       padding: 0;
-
       img {
         position: absolute;
+        cursor: pointer;
       }
     }
 
     .title-container {
-      word-wrap: break-word;
-      max-width: 255px;
+      width: 100%;
+
+      * {
+        font-size: 12px;
+      }
+
+      .title-name {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        line-height: 18px;
+        font-weight: 600 !important;
+      }
+
+      .title-chapter {
+        color: #888888;
+      }
     }
   }
 }
